--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -34,5 +34,11 @@
     }
 }
 
+.social-list__link:not(:last-child) {
+ margin-right: 10px;
+}
 
+.social-list__item:not(:last-child) {
+margin-right: 10px;
+}
 
