--- a/sass/components/_work-title.scss
+++ b/sass/components/_work-title.scss
@@ -1,4 +1,15 @@
 .work__title {
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    margin-top: 0px;
+    margin-bottom: 30px;
+}
+
+@media screen and (min-width:1200px) {
+    .work__title {
     font-size: 36px;
     line-height: 1.16;
     text-align: center;
@@ -7,3 +18,14 @@
     margin-top: 0px;
     margin-bottom: 50px;
 }
+
+}
+// .work__title {
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     color: var(--primary-text-color);
+//     margin-top: 0px;
+//     margin-bottom: 50px;
+// }
