--- a/sass/layout/_structure.scss
+++ b/sass/layout/_structure.scss
@@ -2,17 +2,17 @@
     background: #F5F4FA;
 }
 
-.structure__list {
+.team-member {
+    width: 100%;
+    max-width: 450px;
     display: flex;
     flex-wrap: wrap;
-    margin-top: -30px;
-    margin-left: -30px;
-}
-
-.team-member {
-    margin-top: 30px;
-    margin-left: 30px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+    background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 
     &__subtitle {
     font-family: 'Roboto', sans-serif;
@@ -36,14 +36,77 @@
     margin-top: 0px;
     margin-bottom: 16px;
     }
+}
 
-    &__bloc {
+.team-member__bloc {
     padding-top: 30px;
     padding-bottom: 30px;
-    background-color: var(--wite-color);
-    border-radius: 0px 0px 4px 4px;
-    border: 1px solid #EEEEEE;
-    padding-left: 32px;
-    padding-right: 32px;
+    
+}
+
+
+
+@media screen and (min-width: 768px) {
+    .team-member__bloc {
+    padding-top: 30px;
+    padding-bottom: 24px;
+    }
+
+    .structure__list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 30px;
+    margin-left: -30px;
+    }
+
+    .team-member {
+    margin-left: 30px;
+    width: calc((100%-60px)/2);
     }
 }
+
+// .structure__list {
+//     display: flex;
+//     flex-wrap: wrap;
+//     margin-top: -30px;
+//     margin-left: -30px;
+// }
+
+// .team-member {
+//     margin-top: 30px;
+//     margin-left: 30px;
+//     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+
+//     &__subtitle {
+//     font-family: 'Roboto', sans-serif;
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.18;
+//     letter-spacing: 0.03em;
+//     text-align: center;
+//     color: var(--primary-text-color);
+//     margin-bottom: 10px;
+//     margin-top: 0;
+//     }
+
+//     &__profession {
+//     font-family: 'Roboto', sans-serif;
+//     font-size: 16px;
+//     line-height: 1.18;
+//     letter-spacing: 0.03em;
+//     text-align: center;
+//     color: var(--second-color);
+//     margin-top: 0px;
+//     margin-bottom: 16px;
+//     }
+
+//     &__bloc {
+//     padding-top: 30px;
+//     padding-bottom: 30px;
+//     background-color: var(--wite-color);
+//     border-radius: 0px 0px 4px 4px;
+//     border: 1px solid #EEEEEE;
+//     padding-left: 32px;
+//     padding-right: 32px;
+//     }
+// }
