--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,41 +1,90 @@
 .work {
-    padding-bottom: 94px;
+    display: none;
+}
 
-    &__list {
-    display: flex;
-    align-items: center;
-    margin-top: -30px;
-    margin-left: -30px;
-    flex-wrap: wrap;
-    }
+@media screen and (min-width: 1200px) {
+    .work {
+        display: block;
+        padding-bottom: 94px;
 
-    &__item {
-    margin-top: 30px;
-    margin-left: 30px;
-    }
+        &__list {
+            display: flex;
+            align-items: center;
+            margin-top: -30px;
+            margin-left: -30px;
+            flex-wrap: wrap;
+        }
 
-    &__product {
-    position: relative;
-    }
+        &__item {
+        margin-top: 30px;
+        margin-left: 30px;
+        }
 
-    &__heading {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: rgba(47, 48, 58, 0.8);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--wite-color);
-    margin-top: 0px;
-    margin-bottom: 0px;
-    width: 100%;
-    height: 70px;
+        &__product {
+        position: relative;
+        }
+
+        &__heading {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: rgba(47, 48, 58, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--wite-color);
+        margin-top: 0px;
+        margin-bottom: 0px;
+        width: 100%;
+        height: 70px;
+        }
     }
 }
+
+// .work {
+//     padding-bottom: 94px;
+
+//     &__list {
+//     display: flex;
+//     align-items: center;
+//     margin-top: -30px;
+//     margin-left: -30px;
+//     flex-wrap: wrap;
+//     }
+
+//     &__item {
+//     margin-top: 30px;
+//     margin-left: 30px;
+//     }
+
+//     &__product {
+//     position: relative;
+//     }
+
+//     &__heading {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     background: rgba(47, 48, 58, 0.8);
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 1.14;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//     color: var(--wite-color);
+//     margin-top: 0px;
+//     margin-bottom: 0px;
+//     width: 100%;
+//     height: 70px;
+//     }
+// }
