--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,5 +1,5 @@
-.footer__footer-modal {
-    margin-left: 93px;
+.adds {
+    text-align: center;
 }
 
 .footer-modal__subscription {
@@ -7,10 +7,22 @@
     line-height: 1.14;
     text-transform: uppercase;
     color: #FFFFFF;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
+.footer-form {
+    text-align: center;
+}
+
+.footer__footer-modal {
+    margin-top: 60px;
+}
+
+
 .footer-form__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
@@ -27,7 +39,9 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     border-color: var(--accent-color);
-    margin-left: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
     font-weight: bold;
     padding-left: 28px;
     padding-right: 28px;
@@ -46,7 +60,28 @@
     margin-left: 10px;
 }
 
-.footer-form {
+
+@media screen and (min-width: 1200px) {
+    .footer-form {
     display: flex;
     margin-left: auto;
+    text-align: left;
+}
+
+.footer__footer-modal {
+    margin-left: 93px;
+}
+
+.footer-modal__subscription {
+    text-align: left;
+}
+
+.footer-btn {
+    margin-left: 12px;
+    margin-top: 0px;
+}
+
+.footer-form__input {
+    width: 358px;
+}
 }
