--- a/sass/layout/_regular-clients.scss
+++ b/sass/layout/_regular-clients.scss
@@ -3,12 +3,21 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+
+    margin-top: -30px;
+    margin-left: -30px;
+}
+
+.regular-clients__element {
+    margin-top: 30px;
+    margin-left: 30px;
+    width: calc((100% - 60px) / 2);
 }
 
 .regular-clients__link {
     display: flex;
     justify-content: center;
-    width: 170px;
+    max-width: 170px;
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
@@ -33,4 +42,87 @@
     .regular-clients__link:focus & {
     fill: var(--fon-batton);
     }
+}
+
+
+@media screen and (min-width: 768px) {
+    .regular-clients__element {
+    width: calc((100% - 90px) / 3);
+    }
+
+    .regular-clients__link {
+        max-width: 226px;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    // .regular-clients {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
+    //     flex-wrap: wrap;
+
+    //     display: flex;
+    // justify-content: space-between;
+    // align-items: center;
+    // flex-wrap: wrap;
+
+    // margin-top: -30px;
+    // margin-left: -30px;
+
+    // }
+
+    .regular-clients__element {
+        width: calc((100% - 300px) / 6);
+    }
+
+        .regular-clients__link {
+            width: 170px;
+        }
+
+    // .regular-clients__link {
+    //     display: flex;
+    //     justify-content: center;
+    //     width: 170px;
+    //     height: 92px;
+    //     border: 1px solid #AFB1B8;
+    //     border-radius: 4px;
+
+    //     transition-property: border;
+    //     transition-duration: var(--transition-duration);
+    //     transition-timing-function: var(--transition-timing-function);
+
+    //     &:hover,
+    //     &:after {
+    //     border: 1px solid #2196F3;
+    //     }
+    //     display: flex;
+    // justify-content: center;
+    // max-width: 170px;
+    // height: 92px;
+    // border: 1px solid #AFB1B8;
+    // border-radius: 4px;
+
+    // transition-property: border;
+    // transition-duration: var(--transition-duration);
+    // transition-timing-function: var(--transition-timing-function);
+
+    // &:hover,
+    // &:after {
+    // border: 1px solid #2196F3;
+    // }
+    // }
+
+    // .regular-clients__item {
+    //     transition-property: fill;
+    //     transition-duration: var(--transition-duration);
+    //     transition-timing-function: var(--transition-timing-function);
+    //     fill:  #AFB1B8;
+
+    //     .regular-clients__link:hover &,
+    //     .regular-clients__link:focus & {
+    //     fill: var(--fon-batton);
+    //     }
+    // }
 }
