--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -7,7 +7,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
     ),
-     url("../../images/hero-fon/fon-mob.jpg");
+     url("../images/hero-fon/fon-mob.jpg");
     min-height: 402px;
     margin-left: auto;
     margin-right: auto;
@@ -38,7 +38,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
     ),
-        url("../../images/hero-fon/fon-mob@2x.jpg");
+        url("../images/hero-fon/fon-mob@2x.jpg");
     }
 }
 
@@ -65,7 +65,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
     ),
-        url(../../images/hero-fon/fon-tablet.jpg);
+        url(../images/hero-fon/fon-tablet.jpg);
         min-height: 400px;
         
     }
@@ -80,7 +80,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
     ),
-        url("../../images/hero-fon/fon-tablet@2x.jpg");
+        url("../images/hero-fon/fon-tablet@2x.jpg");
     }
 }
 
@@ -92,7 +92,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
         ),
-        url(../../images/hero-fon/fon-desctop.jpg);
+        url(../images/hero-fon/fon-desctop.jpg);
         max-width: 1600px;
         height: 600px;
         &__caption {
@@ -112,7 +112,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
     ),
-        url("../../images/hero-fon/fon-desctop@2x.jpg");
+        url("../images/hero-fon/fon-desctop@2x.jpg");
     }
 }
 
