--- a/css/main.css
+++ b/css/main.css
@@ -396,6 +396,7 @@ img {
 
 .footer__footer-modal {
   margin-top: 60px;
+  width: 450px;
 }
 
 .footer-form__input {
@@ -1176,6 +1177,8 @@ address {
   .footer-container {
     display: flex;
     align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
@@ -1187,7 +1190,7 @@ address {
 
 .filters {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
   padding-left: 0px;
   margin-top: 0px;
   margin-bottom: 50px;
@@ -1200,6 +1203,7 @@ address {
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+  margin-top: 8px;
 }
 
 .filters__item:not(:last-child) {
@@ -1223,18 +1227,6 @@ address {
   color: #ffffff;
   background-color: var(--fon-batton);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-
-.portfolio__list {
-  margin-top: 30px;
-  margin-left: 30px;
 }
 
 .portfolio__heading {
@@ -1304,5 +1296,11 @@ address {
 .portfolio__item:hover .portfolio__overlay,
 .portfolio__item:focus .portfolio__overlay {
   transform: translateY(0%);
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
+    justify-content: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
