--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -18,6 +18,7 @@
 
 .footer__footer-modal {
     margin-top: 60px;
+    width: 450px;
 }
 
 
@@ -58,6 +59,10 @@
     height: 24px;
     width: 24px;
     margin-left: 10px;
+}
+
+@media screen and (min-width: 768px) {
+
 }
 
 
