--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -4,7 +4,7 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     padding: 40px;
-    width: 528px;
+    width: 450px;
     height: 581px;
     background-color: var(--wite-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -37,3 +37,14 @@
     height: 18px;
 }
 
+@media screen and (min-width: 768px) {
+    .modal {
+width: 450px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+.modal {
+    width: 528px;
+}
+}
