--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,8 @@ body {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .section {
@@ -170,7 +172,7 @@ img {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 528px;
+  width: 450px;
   height: 581px;
   background-color: var(--wite-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -200,6 +202,18 @@ img {
 .modal-clos-btn__icon {
   width: 18px;
   height: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 528px;
+  }
 }
 
 .form__policy-link {
@@ -334,8 +348,8 @@ img {
 
 .form__checkbox-policy {
   font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   color: #757575;
   margin-bottom: 30px;
 }
@@ -374,6 +388,13 @@ img {
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) {
+  .form__checkbox-policy {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
 .adds {
   text-align: center;
 }
@@ -396,7 +417,7 @@ img {
 
 .footer__footer-modal {
   margin-top: 60px;
-  width: 450px;
+  max-width: 450px;
 }
 
 .footer-form__input {
@@ -409,7 +430,7 @@ img {
 }
 
 .footer-btn {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   width: 200px;
   height: 50px;
@@ -570,7 +591,7 @@ img {
   color: var(--accent-color);
 }
 
-.mobile-menu__social-link::after {
+.mobile-menu__social-list:not(:last-child)::after {
   content: "";
   margin-left: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1279,10 +1300,11 @@ address {
   letter-spacing: 0.03em;
   color: var(--second-color);
   margin-top: 0px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .portfolio__border {
+  flex-grow: 1;
   background: var(--wite-color);
   padding: 20px 24px;
   border-left: 1px solid #EEEEEE;
@@ -1296,7 +1318,9 @@ address {
 }
 
 .portfolio__item {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition-property: box-shadow;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
@@ -1334,6 +1358,15 @@ address {
 @media screen and (min-width: 768px) {
   .filters {
     justify-content: center;
+  }
+  .portfolio__list {
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio__list {
+    width: calc((100% - 90px) / 3);
   }
 }
 /*# sourceMappingURL=main.css.map */
