--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -110,9 +110,10 @@
     color: var(--accent-color);
 }
 
-.mobile-menu__social-link::after {
+.mobile-menu__social-list:not(:last-child)::after {
     content: "";
     margin-left: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     transform: rotate(90deg);
 }
+
