--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -130,8 +130,8 @@
 
 .form__checkbox-policy {
     font-weight: normal;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     color: #757575;
     margin-bottom: 30px;
 }
@@ -168,3 +168,9 @@
     }
 }
 
+@media screen and (min-width: 768px) {
+    .form__checkbox-policy {
+    font-size: 14px;
+    line-height: 1.71;
+    }
+}
