--- a/css/main.css
+++ b/css/main.css
@@ -594,6 +594,7 @@ img {
 .mobile-menu__social-list:not(:last-child)::after {
   content: "";
   margin-left: 10px;
+  margin-right: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
 }
