--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -113,6 +113,7 @@
 .mobile-menu__social-list:not(:last-child)::after {
     content: "";
     margin-left: 10px;
+    margin-right: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     transform: rotate(90deg);
 }
