--- a/css/main.css
+++ b/css/main.css
@@ -482,6 +482,7 @@ img {
 }
 
 .mobile-menu {
+  z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
@@ -597,6 +598,12 @@ img {
   margin-right: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   transform: rotate(90deg);
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu__container {
+    display: none;
+  }
 }
 
 .menu {
