--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,4 +1,5 @@
 .mobile-menu {
+    z-index: 10;
     position: fixed;
     top: 0;
     left: 0;
@@ -118,3 +119,8 @@
     transform: rotate(90deg);
 }
 
+@media screen and (min-width: 768px) {
+.mobile-menu__container {
+    display: none;
+}
+}
