--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -124,6 +124,10 @@
     }
 }
 
+// .portfolio__img {
+//     width: 100%;
+// }
+
 @media screen and (min-width: 768px) {
     .filters {
     justify-content: center;
